--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,6 @@
 <app-header></app-header>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>n
 
-<h1>Hola mundo</h1>
+<section class="ae-container-fluid rk-main"></section>
+<app-portafolio></app-portafolio>
+
+<app-footer></app-footer>
