--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <app-header></app-header>
 
-<section class="ae-container-fluid rk-main"></section>
+<section class="ae-container-fluid rk-main">
 <app-portafolio></app-portafolio>
+</section>
 
 <app-footer></app-footer>
